# vscode-flamegraph-test

./: profile.pyspy  pyproject.toml
my test/: my notebook.ipynb  my ray test.py
my_test/: main.py  my_notebook.ipynb
