[tool.poetry]
name = "vscode-flamegraph-test"
version = "0.1.0"
description = ""
authors = ["Rafael Haenel <rafaelhaenel@phas.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ray = "^2.41.0"
matplotlib = "^3.10.0"
jupyter = "^1.1.1"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
